# p

./: .gitattributes  .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  TODO  assert.h  configure  configure.in  gc.h  mac_install_boehm  pinocchio.c  pinocchio.h  pinocchioHelper.ci  pinocchioHelper.hi  test.c  test.h
src/: .gitignore  Makefile  Makefile.am  SETUP  benchmark_results.txt  bootstrap.c  bootstrap.h  class.c  class.h  closure.c  constants.h  debug.c  debug.h  dictionary.c  dictionary.h  gc.h  model.c  model.h  object.c  object.h  pcompiler.scm  pinocchio.c  pinocchio.h  pinocchioHelper.ci  pinocchioHelper.hi  pinocchioLateInit.ci  pinocchioPostInit.ci  pinocchioPreInit.ci  pinocchioType.hi  pinocchioTypeInclude.hi  plib.c  plugin.c  plugin.h  postfix.c  pprocessor.scm  prefix.c  print.c  probes.d  probes.h  slot.h  (+10 more)
src/benchmark/: benchmark.rb  postBenchmark.py  time.rb
src/benchmark/dict/: dictPut.gst  dictPut.p  dictPut.py  dictPut.rb  run.rb
src/benchmark/evalution/: dict.p  fib.p  multiDict00.p  multiDict00.st  multiDict01.p  multiDict02.p  multiDict02.st  multiDict03.p  multiDict03.st  multiDict04.p  multiDict04.st  multiDictTest.p  multiDictTest.st  multiDict_ho_i.p  multiDict_ho_i.st  multiDict_ho_i_hash.p  multiDict_ho_i_hash.st  multiDict_ho_i_mod_10.p  multiDict_ho_rand_i.p  multiDict_ho_rand_i.st  multiDict_ho_rand_i_hash.p  multiDict_ho_rand_i_hash.st  multiDict_ho_rand_i_mod_10.p  multiDict_ho_rand_i_mod_10.st  multiDict_ho_rand_i_mod_100.p  multiDict_ho_rand_i_mod_100.st  parser.p
src/benchmark/fib/: fib.gst  fib.lua  fib.p  fib.php  fib.py  fib.rb  fib.st  fib34.p  fibAll.rb  fibMC.p  fibMCParse.p  fibMetaCircular.p  fibParse.gst  fibParse.lua  fibParse.p  fibParse.php  fibParse.py  fibParse.rb  fibParse.st  fibParseMC.p  fibPythonParse.py  fibRuby.rb  fibRubyMessagesends.rb  result.txt  run.rb  run.sh
src/boot/: core.p  peg.p  scheme.p  smalltalk.p
src/boot/ast/: assign.p  call.p  capture.p  constant.p  list.p  scoped.p  var.p
src/boot/runtime/: env.p
src/boot/test/: test-ast.p  test-core.p  test-peg.p  test-scheme.p  test-smalltalk.p  test-symbol.p
src/boot/type/: array.p  char.p  class.p  dict.p  object.p  smallint.p  string.p  symbol.p
src/compiler/: ast.scm  natives.scm  pcompiler.scm  syntaxc.scm  tools.scm
src/dtrace/: callgraph.d  char_cache.d  functiontime.d  inlinecache.d  int_cache.d  opcodegraph.p
src/hacks/: plib.c  plib.h
src/interpreter/: interface.c  interface.h  native.c  native.h  opcodes.c  opcodes.h
src/kernel/behavior/: block.h  blockclosure.c  blockclosure.h  method.c  method.h  methodclosure.c  methodclosure.h  methoddictionary.c  methoddictionary.h  nativesdictionary.c  nativesdictionary.h
src/kernel/collection/: array.c  array.h  bucket.c  bucket.h  dictionary.c  dictionary.h  identitydictionary.c  identitydictionary.h
src/kernel/interpreter/: jumptarget.c  jumptarget.h  thread.c  thread.h
src/kernel/number/: smallinteger.c  smallinteger.h
src/kernel/object/: class.c  class.h  object.c  object.h  rawarray.c  rawarray.h
src/kernel/string/: string.c  string.h  symbol.c  symbol.h  utility.c  utility.h
src/kernel/structure/: layout.c  layout.h
src/lib/: VERSION  lib.c  lib.h
src/lib/class/: Tests.c  Tests.h
src/parser/: bridge-test.ci  scparser-test.ci  test.ci
src/plugin/: Makefile  Plugin.h  Test.c  Test.h
src/plugin/chronology/: Time.c  TimeHelper.c  TimeHelper.h
src/plugin/concurrency/: AtomicBoolean.c
src/plugin/interpretation/: Interpreter.c
src/plugin/io/: Environment.c  Process.c  ProcessHelper.c  ProcessHelper.h  Socket.c  SocketHelper.c  SocketHelper.h
src/scheme/: behaviour.c  behaviour.h  natives.c  natives.h  symbols.c  symbols.h
src/system/: dict.h  icall.h  iconst.c  iscoped.c  iscoped.h  string.c
src/system/ast/: Annotation.c  Annotation.h  Assign.c  Assign.h  Block.c  Block.h  Callec.c  Callec.h  CallecTest.ci  Constant.c  Constant.h  Info.c  Info.h  InstVariable.c  InstVariableTest.ci  Method.c  Method.h  MethodTest.ci  NativeMethod.c  NativeMethod.h  NativeMethodTest.ci  PointerSlot.c  PointerSlot.h  ReflectionMethod.c  ReflectionMethod.h  Self.c  Self.h  SelfTest.ci  Send.c  Send.h  Slot.c  Slot.h  SlotTest.ci  Super.c  Super.h  SuperTest.ci  ThreadedMethod.c  ThreadedMethod.h  UIntSlot.c  UIntSlot.h  (+32 more)
src/system/class/: Class.c  Class.h
src/system/collection/: Array.c  Array.h  DictBucket.c  DictBucket.h  Dictionary.c  Dictionary.h  IdentityDictionary.c  IdentityDictionary.h  Set.c  Set.h  SetBucket.c  SetBucket.h
src/system/interpretation/: Interpreter.c  Interpreter.h  Threaded.c  Threaded.h
src/system/io/: File.c  File.h  Stream.c  file.c  file.h  stream.c  stream.h
src/system/layout/: Layout.c  Layout.h
src/system/number/: Float.c  Float.h  SmallInt.c  SmallInt.h
src/system/object/: Boolean.c  Boolean.h  Nil.c  Nil.h  Object.c  Object.h
src/system/organization/: ClassReference.c  ClassReference.h  ClassReferenceTest.ci
src/system/plugin/: Plugin.c  Plugin.h
src/system/reflection/: Reflect.h
src/system/runtime/: BlockClosure.c  BlockClosure.h  BlockClosureTest.ci  BlockContext.c  BlockContext.h  Context.c  Context.h  Continuation.c  Continuation.h  Continue.c  Continue.h  ContinueTest.ci  Exception.c  Exception.h  InlineCache.c  InlineCache.h  InlineCacheTest.ci  Message.c  Message.h  MessageTest.ci  MethodClosure.c  MethodClosure.h  MethodClosureTest.ci  MethodContext.c  MethodContext.h  Thread.c  Thread.h  ThreadTest.ci  env.c  env.h
src/system/slot/: PointerSlot.c  PointerSlot.h  Slot.c  Slot.h  UIntSlot.c  UIntSlot.h  UintSlot.c  UintSlot.h
src/system/string/: Character.c  Character.h  CharacterTable.c  String.c  String.h  Symbol.c  Symbol.h
src/system/tool/: fallback.c  ival.c  ival.h  shift.c  shift.h
src/system/type/: Array.c  Array.h  ArrayTest.ci  Nil.c  (+51 more)
src/test/: FibTest.ci  pinocchioTest.c  pinocchioTest.h  pinocchioTest.hi
src/tests/: Makefile  dictionary.c  dictionary.h  interpreter.c  interpreter.h  natives.c  natives.h  pinocchio_test.c  pinocchio_test.h  symbols.c  symbols.h  tests.c  tests.h
(+903 files in other folders)
