#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([pinocchio], [0.1], [verwaest@iam.unibe.ch])
AC_CONFIG_SRCDIR([src/bootstrap.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([-Wall])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lgc':
AC_CHECK_LIB([gc], [GC_malloc], [], [
	echo "Boehm GC not installed. Get it at"
    echo "http://www.hpl.hp.com/personal/Hans_Boehm/gc/gc_source/"
    echo "and make sure to disable thread support on OSX through"
    echo "./configure --disable-threads"
	exit -1])

# Checks for header files.
AC_CHECK_HEADERS([locale.h stdlib.h string.h wchar.h])

# Checks for programs.
AC_CHECK_TOOL([MZSCHEME], [mzscheme])
test $MZSCHEME ||
AC_MSG_ERROR([[MzScheme not installed. Please download from http://www.plt-scheme.org/]])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.
AC_CHECK_FUNCS([setlocale])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
